--- a/Client/index.html
+++ b/Client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Import the Inter Fonts -->
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <title>YourWorld - A World of Your Imaginations</title>
+    <title>DreamDex - A World of Your Imaginations</title>
   </head>
   <body>
     <div id="root"></div>
